<resources>
    <string name="app_name">Nike Store</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">اطلاعات کاربری</string>
    <string name="main_searchEditText_hint">جستجو</string>
    <string name="newestProducts">جدیدترین</string>
    <string name="seeAll">مشاهده همه</string>
    <string name="popularProducts">پرفروش ترین</string>
    <string name="productsDiscription">تصور کنید که وارد دنیایی شده‌اید که هر قدم شما داستانی برای گفتن دارد. نایک ایر جردن 1 لو تروفی روم روکی کارد دقیقاً همین حس را به شما منتقل می‌کند. این کتونی جردن خاص تنها یک کفش نیست؛ بلکه پلی است میان تاریخ پرافتخار بسکتبال و استایل مدرن.</string>
    <string name="comments">نظرات کاربران</string>
    <string name="addComment">ثبت نظر</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="showAllComments">همه نظرات</string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortPriceHighToLow">گران ترین</string>
    <string name="sortPriceLowToHigh">ارزان ترین</string>
    <string name="addToCart_success">محصول به سبد خرید افزوده شد</string>
    <string name="commentsEmptyState">اولین نفری باشید که نظر می دهید!</string>
    <string name="unknownError">اتصال خود را بررسی و دوباره امتحان کنید</string>

    <string-array name="sortTitlesArray">
        <item>@string/newestProducts</item>
        <item>@string/popularProducts</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>

    <string name="loginTitle">ورود به حساب کاربری</string>
    <string name="authHint">ایمیل و رمز عبور خود را وارد نمایید</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود به حساب</string>
    <string name="loginScreenQuestion">هنوز ثبت نام نکرده اید؟</string>
    <string name="signupScreenQuestion">قبلا ثبت نام کرده اید؟</string>
    <string name="signup">ثبت نام</string>
    <string name="loginSuccess">با موفقیت وارد شدید!</string>
    <string name="signupTitle">ایجاد حساب کاربری</string>
    <string name="welcome">به نایک استور خوش آمدید</string>
    <string name="enterEmailError">ایمیل را وارد کنید</string>
    <string name="passwordError">رمز عبور حداقل باید 6 رقم باشد</string>
    <string name="pay">پرداخت</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="count">تعداد</string>
    <string name="purchaseDetail">جزئیات خرید</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="payablePrice">مبلغ نهایی</string>
    <string name="loginEmptyState">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست!\n ابتدا محصولی را به  سبد خرید خود اضافه کنید</string>
    <string name="favoritesList">لیست علاقه مندی ها</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="settings">تنظیمات</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="version">نسخه: 1.0.0</string>
    <string name="guest">کاربر مهمان</string>
    <string name="notifyLogout">از حساب خود خارج شدید</string>
    <string name="theme">ظاهر</string>
    <string name="darkMode">حالت شب</string>
    <string name="shippingToolbarTitle">تحویل گیرنده و شیوه پرداخت</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="address">آدرس</string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرداخت در محل</string>
    <string name="checkoutToolbarTitle">رسید پرداخت</string>
    <string name="returnToHome">بازگشت به صفحه اصلی</string>
    <string name="orderStatus">وضعیت سفارش</string>
    <string name="price">مبلغ</string>
    <string name="paymentSuccess">پرداخت موفق</string>
    <string name="paymentFailed">پرداخت ناموفق</string>
    <string name="addressRequirement">آدرس بین 20 تا 50 حرف باشد</string>
    <string name="enterFirstName">نام را وارد نمایید</string>
    <string name="enterLastName">نام خانوادگی را وارد نمایید</string>
    <string name="postalCodeError">کد پستی باید 10 رقم باشد</string>
    <string name="mobileError">شماره موبایل باید 11 رقم باشد</string>
    <string name="removeFavoriteItemHint">برای حذف محصول از لیست علاقه مندی ها، آن را به سمت چپ یا راست بکشید.</string>
    <string name="iUnderstand">متوجه شدم</string>
    <string name="tooltip">راهنما</string>
    <string name="favoritesEmptyState">محصولی در لیست علاقه مندی ها وجود ندارد!</string>
    <string name="goToProductList">مشاهده محصولات</string>
    <string name="restore">بازگشت</string>
    <string name="removedFromFavorites">از لیست علاقه مندی ها حذف شد</string>
    <string name="submitComment">ثبت</string>
    <string name="enterComment">نظر خود را بنویسید…</string>
    <string name="commentTitle">عنوان نظر</string>
    <string name="commentAdded">نظر شما با موفقیت ثبت شد</string>
    <string name="addCommentTitle">ثبت نظر</string>
    <string name="commentTitleEmptyError">عنوان نظر الزامی است!</string>
    <string name="commentContentEmptyError">توضیحات نظر الزامی است!</string>
    <string name="orderId">شناسه سفارش</string>
    <string name="orderHistoryEmptyState">هنوز سفارشی ثبت نکرده اید!</string>
</resources>