<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tooltip"
        android:textAppearance="?textAppearanceHeadline6"
        android:layout_gravity="center_horizontal"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/removeFavoriteItemHint"
        android:textAppearance="?textAppearanceBody1"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/acceptBtn"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="24dp"
        android:text="@string/iUnderstand"
        app:fontFamily="@font/primary_bold"
        android:textAppearance="?textAppearanceBody1"
        app:cornerRadius="@dimen/cornerRadius" />

</LinearLayout>