<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.shipping.ShippingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.nikestore.view.NikeToolbar
            android:id="@+id/shippingToolbarView"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:nt_title="@string/shippingToolbarTitle" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:paddingBottom="24dp"
        android:paddingTop="8dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameEtl"
                style="@style/ShippingTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEt"
                    style="@style/ShippingTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEtl"
                style="@style/ShippingTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEt"
                    style="@style/ShippingTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCodeEtl"
                style="@style/ShippingTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postalCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCodeEt"
                    style="@style/ShippingTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileEtl"
                style="@style/ShippingTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileEt"
                    style="@style/ShippingTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="11" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressEtl"
                style="@style/ShippingTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:counterTextAppearance="?textAppearanceBody2"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="?textAppearanceBody2"
                app:helperText="@string/addressRequirement">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEt"
                    style="@style/ShippingTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/purchaseDetailView"
                layout="@layout/item_purchase_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onlinePaymentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:layout_marginEnd="16dp"
                    android:text="@string/onlinePayment"
                    android:textAppearance="?textAppearanceBody1"
                    app:cornerRadius="6dp"
                    app:fontFamily="@font/primary_bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/codBtn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:text="@string/cashOnDelivery"
                    android:textAppearance="?textAppearanceBody1"
                    app:cornerRadius="6dp"
                    app:fontFamily="@font/primary_bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>