<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.settings.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.nikestore.view.NikeToolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:nt_title="@string/settings"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="?android:textColorSecondary"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:divider="@drawable/shape_divider"
            android:showDividers="beginning|middle|end"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">
            <TextView
                style="@style/ProfileLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/darkMode"
                android:drawableStart="@drawable/ic_dark_mode"
                android:layout_gravity="center_vertical|start"
                android:textAppearance="?textAppearanceBody1"
                />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"
                    />
            </FrameLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>